--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Rango</title>
-</head>
-<body>
-	<div>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+	{{ category.name }}
+{% endblock %}
+
+{% block body_block %}
 	{% if category %}
 		<h1> {{category.name}} </h1>
 		{% if pages %}
@@ -16,12 +17,10 @@
 		{% else %}
 			<strong>No pages in category currently</strong>
 		{% endif %}
+		{% if user.is_authenticated %}
+			<a href="{% url 'add_page' category.slug %}"> Add page </a>
+		{% endif %}
 	{% else %}
 		The specified category does not exist!
 	{% endif %}
-	</div>
-	<div>
-		<a href="/">Back to index</a>
-	</div>
-</body>
-</html>
+{% endblock %}
