--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,47 +1,50 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
-	<head> 
-		<title>Rango</title>
-		<!--<link rel= "stylesheet" href="{% static 'css/base.css' %}"/>-->
-		<!--<script src="{% static 'js/jquery.js' %}"></script>-->
-	</head>
-	<body>
-		<h1>Rango says</h1>
-		<div>
-			Hey there partner <br/>
-		</div>
+	
+{% block title_block %}
+	Index
+{% endblock %}
 
-		<div>
-		{% if categories %}
-			<h2> Most Liked Categories </h2>
-			<ul>
-				{% for category in categories %}
-					<li><a href="/rango/category/{{category.slug}}">{{category.name}}</a></li>
-				{% endfor %}
-			</ul>
+{% block body_block %}
+	<h1>Rango says</h1>
+	<div>
+		{% if user.is_authenticated %}
+			howdy {{ user.username }}
 		{% else %}
-			<strong> There are no categories present </strong>
+			Hey there partner !!
 		{% endif %}
-		</div>
-		
-		<div>
-		{% if pages %}
-			<h2> Most Liked Pages </h2>
-			<ul>
-				{% for page in pages %}
-					<li> <a href="{{page.url}}">{{page.title}}</a></li>
-				{% endfor %}
-			</ul>
-		{% else %}
-			<strong> There are no pages present</strong>
-		{% endif %}
-		</div>
-		
-		<div>
-			<a href = "/rango/about/">About Rango </a><br/>
-			<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango"/>
-		</div>
-	</body>
-</html>
+	</div>
+
+	<div>
+	{% if categories %}
+		<h2> Most Liked Categories </h2>
+		<ul>
+			{% for category in categories %}
+				<li><a href="{% url 'showcategory' category.slug %}">{{category.name}}</a></li>
+			{% endfor %}
+		</ul>
+	{% else %}
+		<strong> There are no categories present </strong>
+	{% endif %}
+	</div>
+
+	<div>
+	{% if pages %}
+		<h2> Most Liked Pages </h2>
+		<ul>
+			{% for page in pages %}
+				<li> <a href="{{page.url}}">{{page.title}}</a></li>
+			{% endfor %}
+		</ul>
+	{% else %}
+		<strong> There are no pages present</strong>
+	{% endif %}
+	</div>
+
+	<div>
+		<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango"/>
+	</div>
+
+{% endblock %}
 
 
